--- a/src/Busybee/PersonBundle/Resources/views/Address/address2.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Address/address2.html.twig
@@ -1,4 +1,4 @@
 {# src/Busybee/PersonBundle/Resources/views/Address/address2.html.twig #}
 
-{% include 'BusybeePersonBundle:Address:edit.html.twig' with {'form': form.add2, 'addressTitle': 'address2.title', 'address': address2, 'classSuffix': 'address2', 'addressLabel': addressLabel2} %}
+{% include 'BusybeePersonBundle:Address:edit.html.twig' with {'form': form.address2, 'addressTitle': 'address2.title', 'address': address2, 'classSuffix': 'address2', 'addressLabel': addressLabel2} %}
 {% do form.address2.setRendered %}
