--- a/src/Busybee/PersonBundle/Resources/views/Address/address1.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Address/address1.html.twig
@@ -1,4 +1,4 @@
 {# src/Busybee/PersonBundle/Resources/views/Address/address1.html.twig #}
 
-{% include 'BusybeePersonBundle:Address:edit.html.twig' with {'form': form.address1, 'address': address1, 'classSuffix': 'address1', 'addressLabel': addressLabel1} %}
+{% include 'BusybeePersonBundle:Address:edit.html.twig' with {'form': form.fullAddress1, 'address': address1, 'classSuffix': 'address1', 'addressLabel': addressLabel1} %}
 {% do form.address1.setRendered %}
