NAT00080, Setting Import

--- a/src/Busybee/HomeBundle/Resources/views/Menu/submenu.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Menu/submenu.html.twig
@@ -10,7 +10,7 @@
 			{% for drop in get_menuItems(menu.menu) %}
 				{% if (drop.role is defined and is_granted(drop.role)) or drop.role is not defined %}
 					{% if (drop.test is defined and test_menuItem(drop.test)) or drop.test is not defined %}
-						{% if drop.menu is defined %}
+						{% if drop.menu is defined and menu_required(drop.menu) %}
 							{% include 'BusybeeHomeBundle:Menu:submenu.html.twig' with {'menu': drop} %}
 						{% elseif drop.route is defined %}
 							{% set translate = 'BusybeeHomeBundle' %}{% if drop.translate is defined %}{% set translate = drop.translate %}{% endif %}
