--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/year.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/year.html.twig
@@ -22,10 +22,10 @@
 					{{ form_row(form.name) }}
 				</div>
 				<div class="col-sm-3 well">
-					{{ form_row(form.start) }}
+					{{ form_row(form.firstDay) }}
 				</div>
 				<div class="col-sm-3 well">
-					{{ form_row(form.end) }}
+					{{ form_row(form.lastDay) }}
 				</div>
 				<div class="col-sm-3 well">
 					{{ form_row(form.status) }}
